[cs-ui] CSInputFile - fixed React DOM validation error, prevented draging text to component, fixed file label overflow

--- a/cs-ui-components/src/sass/components/_cs-input-file.scss
+++ b/cs-ui-components/src/sass/components/_cs-input-file.scss
@@ -35,6 +35,10 @@
 			cursor: default;
 			pointer-events: none;
 		}
+
+		.cs-tooltip-wrapper {
+			max-width: 100%;
+		}
 	}
 
 	// Label
